[gd_scene load_steps=52 format=2]

[ext_resource path="res://Scenes/ball_explosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/boss.gd" type="Script" id=2]
[ext_resource path="res://Entities/enemy/boss/Walk (1).png" type="Texture" id=3]
[ext_resource path="res://Entities/enemy/boss/Walk (4).png" type="Texture" id=4]
[ext_resource path="res://Entities/enemy/boss/Jump (2).png" type="Texture" id=5]
[ext_resource path="res://Entities/enemy/boss/Jump (10).png" type="Texture" id=6]
[ext_resource path="res://Entities/enemy/boss/Jump (11).png" type="Texture" id=7]
[ext_resource path="res://Entities/enemy/boss/Jump (12).png" type="Texture" id=8]
[ext_resource path="res://Entities/enemy/boss/Jump (1).png" type="Texture" id=9]
[ext_resource path="res://Entities/enemy/boss/Idle (6).png" type="Texture" id=10]
[ext_resource path="res://Entities/enemy/boss/Idle (2).png" type="Texture" id=11]
[ext_resource path="res://Entities/enemy/boss/Walk (6).png" type="Texture" id=12]
[ext_resource path="res://Entities/enemy/boss/Idle (4).png" type="Texture" id=13]
[ext_resource path="res://Entities/enemy/boss/Jump (8).png" type="Texture" id=14]
[ext_resource path="res://Entities/enemy/boss/Walk (2).png" type="Texture" id=15]
[ext_resource path="res://Entities/sounds/Walk.wav" type="AudioStream" id=16]
[ext_resource path="res://Entities/enemy/boss/Idle (5).png" type="Texture" id=17]
[ext_resource path="res://Entities/enemy/boss/Walk (7).png" type="Texture" id=18]
[ext_resource path="res://Entities/sounds/Jump.wav" type="AudioStream" id=19]
[ext_resource path="res://Entities/enemy/boss/Walk (9).png" type="Texture" id=20]
[ext_resource path="res://Entities/enemy/boss/Idle (10).png" type="Texture" id=21]
[ext_resource path="res://Entities/enemy/boss/Walk (10).png" type="Texture" id=22]
[ext_resource path="res://Entities/enemy/boss/Dead (4).png" type="Texture" id=23]
[ext_resource path="res://Entities/enemy/boss/Dead (7).png" type="Texture" id=24]
[ext_resource path="res://Entities/enemy/boss/Jump (9).png" type="Texture" id=25]
[ext_resource path="res://Entities/enemy/boss/Idle (1).png" type="Texture" id=26]
[ext_resource path="res://Entities/enemy/boss/Walk (8).png" type="Texture" id=27]
[ext_resource path="res://Entities/enemy/boss/Jump (3).png" type="Texture" id=28]
[ext_resource path="res://Entities/enemy/boss/Idle (7).png" type="Texture" id=29]
[ext_resource path="res://Entities/enemy/boss/Dead (6).png" type="Texture" id=30]
[ext_resource path="res://Entities/enemy/boss/Idle (9).png" type="Texture" id=31]
[ext_resource path="res://Entities/enemy/boss/Dead (1).png" type="Texture" id=32]
[ext_resource path="res://Entities/enemy/boss/Dead (5).png" type="Texture" id=33]
[ext_resource path="res://Entities/enemy/boss/Jump (4).png" type="Texture" id=34]
[ext_resource path="res://Entities/enemy/boss/Idle (8).png" type="Texture" id=35]
[ext_resource path="res://Entities/enemy/boss/Idle (3).png" type="Texture" id=36]
[ext_resource path="res://Entities/sounds/Fall.wav" type="AudioStream" id=37]
[ext_resource path="res://Entities/enemy/boss/Dead (8).png" type="Texture" id=38]
[ext_resource path="res://Entities/enemy/boss/Dead (3).png" type="Texture" id=39]
[ext_resource path="res://Entities/enemy/boss/Walk (5).png" type="Texture" id=40]
[ext_resource path="res://Entities/enemy/boss/Jump (7).png" type="Texture" id=41]
[ext_resource path="res://Entities/enemy/boss/Dead (2).png" type="Texture" id=42]
[ext_resource path="res://Entities/enemy/boss/Walk (3).png" type="Texture" id=43]
[ext_resource path="res://Entities/enemy/boss/Jump (5).png" type="Texture" id=44]
[ext_resource path="res://Entities/enemy/boss/Jump (6).png" type="Texture" id=45]
[ext_resource path="res://Scenes/HUD_enemy.tscn" type="PackedScene" id=46]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment()
{
	vec4 color = texture(TEXTURE, UV);
	
	COLOR = vec4(color.r, color.b, color.b, color.a);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 11 ), ExtResource( 36 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 21 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 15 ), ExtResource( 43 ), ExtResource( 4 ), ExtResource( 40 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 27 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 28 ), ExtResource( 34 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 41 ), ExtResource( 14 ), ExtResource( 25 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "Jump",
"speed": 25.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 23 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 38 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 32.0
height = 224.208

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.105882, 0.560784, 0.137255, 1 )
material = SubResource( 2 )
position = Vector2( 70.3945, -1.52588e-05 )
scale = Vector2( 0.26436, 0.813559 )
frames = SubResource( 3 )
animation = "Idle"
offset = Vector2( 120, 0 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 49.6389, -3.77975 )
shape = SubResource( 4 )

[node name="walk_sound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 16 )
attenuation = 15.0
bus = "FX"

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 19 )
bus = "FX"

[node name="fall_sound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 37 )
bus = "FX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/hit = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 64, -96 )
enabled = true
cast_to = Vector2( 0, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 64, 96 )
enabled = true
cast_to = Vector2( 0, 0 )

[node name="ball_explosion" parent="." instance=ExtResource( 1 )]
visible = false

[node name="BallPoint" type="Node2D" parent="."]
visible = false
position = Vector2( 64, 64 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 51.1409, -0.5 )
scale = Vector2( 1.6251, 1.54881 )

[node name="HUD_enemy" parent="." instance=ExtResource( 46 )]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
